[gd_scene load_steps=5 format=3 uid="uid://dlooo2p1aseb7"]

[ext_resource type="Script" path="res://Scripts/settings_menu.gd" id="1_fd0bs"]
[ext_resource type="PackedScene" uid="uid://dp3rgulefoh11" path="res://Scenes/volume_slider.tscn" id="2_1v0ex"]
[ext_resource type="Script" path="res://Scripts/FPSSlider.gd" id="2_gyywf"]
[ext_resource type="Script" path="res://Scripts/FPScounter.gd" id="3_qiafr"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fd0bs")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -783.5
offset_top = -432.0
offset_right = 783.5
offset_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2

[node name="Graphics" type="TabBar" parent="TabContainer"]
layout_mode = 2
tab_alignment = 1

[node name="DisplayLabel" type="Label" parent="TabContainer/Graphics"]
layout_mode = 2
offset_left = 290.5
offset_top = 117.0
offset_right = 548.5
offset_bottom = 175.0
theme_override_font_sizes/font_size = 40
text = "Display Mode"

[node name="DisplayOption" type="OptionButton" parent="TabContainer/Graphics"]
layout_mode = 1
offset_left = 1127.5
offset_top = 135.0
offset_right = 1252.5
offset_bottom = 166.0
item_count = 3
selected = 0
popup/item_0/text = "Fullscreen"
popup/item_0/id = 0
popup/item_1/text = "Windowed"
popup/item_1/id = 1
popup/item_2/text = "Borderless-Windowed"
popup/item_2/id = 2

[node name="FPSLabel" type="Label" parent="TabContainer/Graphics"]
layout_mode = 2
offset_left = 291.0
offset_top = 245.0
offset_right = 552.0
offset_bottom = 303.0
theme_override_font_sizes/font_size = 40
text = "Max FPS"
horizontal_alignment = 1

[node name="FPSSlider" type="HSlider" parent="TabContainer/Graphics"]
layout_mode = 0
offset_left = 1055.5
offset_top = 273.0
offset_right = 1335.5
offset_bottom = 289.0
min_value = 2.0
max_value = 120.0
value = 60.0
script = ExtResource("2_gyywf")

[node name="Label" type="Label" parent="TabContainer/Graphics/FPSSlider"]
layout_mode = 0
offset_left = -48.0
offset_top = -4.0
offset_right = -8.0
offset_bottom = 22.0
text = "123"

[node name="Sound" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="MusicLabel" type="Label" parent="TabContainer/Sound"]
layout_mode = 2
offset_left = 290.5
offset_top = 136.0
offset_right = 558.5
offset_bottom = 194.0
theme_override_font_sizes/font_size = 40
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicSlider" parent="TabContainer/Sound" instance=ExtResource("2_1v0ex")]
layout_mode = 0
offset_left = 807.5
offset_top = 152.0
offset_right = 1304.5
offset_bottom = 168.0
bus_name = "Music"

[node name="SoundLabel" type="Label" parent="TabContainer/Sound"]
layout_mode = 0
offset_left = 290.5
offset_top = 272.0
offset_right = 558.5
offset_bottom = 330.0
theme_override_font_sizes/font_size = 40
text = "SFX Volume"
horizontal_alignment = 1

[node name="SFXSlider" parent="TabContainer/Sound" instance=ExtResource("2_1v0ex")]
layout_mode = 0
offset_left = 807.5
offset_top = 288.0
offset_right = 1304.5
offset_bottom = 304.0
bus_name = "SFX"

[node name="Game" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 327.5
offset_top = 100.0
offset_right = -350.5
offset_bottom = -308.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 37
text = "Credits
Arkhipov M.V. - Design, Coding
Vasilyev M. - Coding 
Andreeva P. - Art, Sound"

[node name="Delete Save" type="Button" parent="TabContainer/Game"]
layout_mode = 0
offset_left = 500.0
offset_top = 525.0
offset_right = 995.0
offset_bottom = 661.0
text = "Delete Save File"

[node name="ExitSettings" type="Button" parent="."]
layout_mode = 0
offset_left = 1717.0
offset_top = 108.0
offset_right = 1744.0
offset_bottom = 139.0
text = " X "

[node name="FPS" type="Label" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 944.0
offset_right = 256.0
offset_bottom = 970.0
text = "123"
script = ExtResource("3_qiafr")

[connection signal="item_selected" from="TabContainer/Graphics/DisplayOption" to="." method="_on_display_option_item_selected"]
[connection signal="pressed" from="TabContainer/Game/Delete Save" to="." method="_on_delete_save_pressed"]
[connection signal="pressed" from="ExitSettings" to="." method="_on_exit_settings_pressed"]
